[gd_scene load_steps=17 format=3 uid="uid://s2e7upxrq6nc"]

[ext_resource type="Texture2D" uid="uid://dnoqc3vrtfvn6" path="res://Images/prueba20193.png" id="2_iwfq2"]
[ext_resource type="FontFile" uid="uid://ccw85tcxbfsoy" path="res://Fonts/DODOL/Dodol Sabang.ttf" id="3_qoqlk"]
[ext_resource type="Texture2D" uid="uid://bfau0q7q4evcp" path="res://Images/Pedaleando LOGO_FINAL-01 (1).png" id="4_7r1g0"]
[ext_resource type="Script" uid="uid://bbpp6oup0jb6n" path="res://jugar.gd" id="5_7r1g0"]
[ext_resource type="Texture2D" uid="uid://ewtpfhfkhmjq" path="res://Images/Pedaleando LOGO_FINAL-01 HOVER.png" id="5_cqjrg"]
[ext_resource type="Script" uid="uid://f1jnokbjvj7s" path="res://MainMenu.gd" id="6_7r1g0"]
[ext_resource type="Script" uid="uid://5qgrxxnx6d4s" path="res://historia.gd" id="6_cqjrg"]
[ext_resource type="Script" uid="uid://djknx4c2f1v2d" path="res://BOTONES.gd" id="7_e2xy7"]
[ext_resource type="PackedScene" uid="uid://bj4l12pwu20wy" path="res://exit_dialog.tscn" id="9_fimr5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iwfq2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2xy7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7r1g0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cqjrg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwfq2"]
bg_color = Color(0, 0.286275, 0.392157, 1)
border_width_left = 70
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 70.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0
shadow_color = Color(0, 0, 0, 0.811765)
shadow_size = 1
shadow_offset = Vector2(1.72, 1.803)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7r1g0"]
bg_color = Color(0.866667, 1, 0.301961, 1)
corner_radius_top_left = 4
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 4
expand_margin_left = 1.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqjrg"]
bg_color = Color(0.866667, 1, 0.301961, 1)
corner_radius_top_left = 4
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 4
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6_7r1g0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iwfq2")
expand_mode = 1

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.0
offset_top = -105.0
offset_right = 319.0
offset_bottom = 526.0
grow_horizontal = 2
texture_normal = ExtResource("4_7r1g0")
texture_hover = ExtResource("5_cqjrg")
ignore_texture_size = true
stretch_mode = 6

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -282.5
offset_top = -280.0
offset_right = 282.5
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15
alignment = 1

[node name="JUGAR" type="Button" parent="Menu"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.286275, 0.392157, 1)
theme_override_colors/font_color = Color(0.866667, 1, 0.301961, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_qoqlk")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_iwfq2")
theme_override_styles/hover = SubResource("StyleBoxFlat_e2xy7")
text = "JUGAR DEMO"
flat = true
script = ExtResource("5_7r1g0")

[node name="HISTORIA" type="Button" parent="Menu"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.286275, 0.392157, 1)
theme_override_colors/font_color = Color(0.866667, 1, 0.301961, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_qoqlk")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_7r1g0")
text = "OPCIONES
"
flat = true
script = ExtResource("6_cqjrg")

[node name="SALIR" type="Button" parent="Menu"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.286275, 0.392157, 1)
theme_override_colors/font_color = Color(0.866667, 1, 0.301961, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_qoqlk")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_cqjrg")
text = "SALIR"
flat = true
script = ExtResource("7_e2xy7")

[node name="SoundSldiers" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_top = 17.0
offset_right = -12.0
offset_bottom = 64.0
grow_horizontal = 0
theme_override_constants/separation = 15

[node name="Music" type="VBoxContainer" parent="SoundSldiers"]
layout_mode = 2
alignment = 1

[node name="HSlider" type="HSlider" parent="SoundSldiers/Music"]
layout_mode = 2
theme_override_constants/center_grabber = 1
theme_override_styles/slider = SubResource("StyleBoxFlat_iwfq2")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7r1g0")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_cqjrg")
value = 50.0
ticks_on_borders = true

[node name="Label" type="Label" parent="SoundSldiers/Music/HSlider"]
layout_mode = 2
offset_left = -98.0
offset_right = 30.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.866667, 1, 0.301961, 1)
theme_override_colors/font_shadow_color = Color(0.180392, 0.333333, 0.407843, 1)
theme_override_colors/font_outline_color = Color(0.560784, 1, 0.894118, 1)
theme_override_fonts/font = ExtResource("3_qoqlk")
theme_override_font_sizes/font_size = 15
text = "MUSIC"
horizontal_alignment = 1

[node name="VFX" type="VBoxContainer" parent="SoundSldiers"]
layout_mode = 2
alignment = 1

[node name="HSlider" type="HSlider" parent="SoundSldiers/VFX"]
layout_mode = 2
theme_override_constants/center_grabber = 1
theme_override_styles/slider = SubResource("StyleBoxFlat_iwfq2")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7r1g0")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_cqjrg")
value = 50.0
ticks_on_borders = true

[node name="Label" type="Label" parent="SoundSldiers/VFX/HSlider"]
layout_mode = 2
offset_left = -98.0
offset_right = 30.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.866667, 1, 0.301961, 1)
theme_override_colors/font_shadow_color = Color(0.180392, 0.333333, 0.407843, 1)
theme_override_colors/font_outline_color = Color(0.560784, 1, 0.894118, 1)
theme_override_fonts/font = ExtResource("3_qoqlk")
theme_override_font_sizes/font_size = 15
text = "VFX"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ExitDialog" parent="." instance=ExtResource("9_fimr5")]

[connection signal="pressed" from="Menu/JUGAR" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="Menu/SALIR" to="." method="_on_salir_pressed"]
